--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
-android {
-    compileSdkVersion 23
+android {g
+    compileSdkVersion 24
     buildToolsVersion "24.0.0"
 
     defaultConfig {
