--- a/banner/project.properties
+++ b/banner/project.properties
@@ -5,6 +5,6 @@ project.groupId=com.gerenvip
 project.artifactId=banner
 project.packaging=aar
 project.siteUrl=https://github.com/gerenvip/bannerComponent
-project.gitUrl=git@github.com:gerenvip/bannerComponent.git
+project.gitUrl=https://github.com/gerenvip/bannerComponent.git
 #javadoc
 javadoc.name=bannerComponent
