--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,6 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.github.bumptech.glide:glide:3.7.0'
-//    implementation project(path: ':banner')
+    implementation project(path: ':banner')
     implementation 'com.ToxicBakery.viewpager.transforms:view-pager-transforms:1.2.32@aar'
 }
